--- a/src/App.css
+++ b/src/App.css
@@ -141,3 +141,11 @@ button:active {
     padding: 1rem 1.5rem;
   }
 }
+
+ul{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;  
+}
